[package]
name = "factorize"
version = "0.1.1"
edition = "2021"

license = "Apache-2.0"
description = "A natively cross-platform and fast factorization utility written in pure Rust."
repository = "https://github.com/cmpute/factorize"
keywords = ["numeric", "factorization"]
categories = ["mathematics", "algorithms"]
readme = "README.md"

[dependencies]
num-prime = "0.3.3"
num-bigint = "0.4.0"
num-traits = "0.2.14"
yansi = "0.5.1"

[dependencies.clap]
version = "3.1.12"
features = ['derive']
